# fastmcp-endpoint-toolsets

./: .dockerignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  USAGE.md  client.py  docker-compose.yml  pyproject.toml  registry.py  requirements.txt  server.py
static/: index.html
tests/: test_endpoint_toolsets.py
tools/: __init__.py  json_tools.py  math_tools.py  text_tools.py  time_tools.py
